<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eXgalleries</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_library_list">Libraries</string>
    <string name="title_library_detail">Library Detail</string>
    <string name="title_activity_library">Libraries</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="menu_add_library">Add library</string>
    <string name="title_activity_add_library">Add Library</string>
    <string name="menu_action_cancel">Cancel</string>
    <string name="menu_action_ok">OK</string>
    <string name="file">File</string>
    <string name="file_not_selected">&lt;file not selected></string>
    <string name="select_file">Select file</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="file_is_not_a_library">File is not a library</string>
    <string name="out_of_memory">Out of memory</string>
    <string name="file_is_too_big">File is too big</string>
    <string name="library_colon">"Library: "</string>
    <string name="link_colon">Link: </string>
    <string name="version_colon">"Version: "</string>
    <string name="author_colon">"Author: "</string>
    <string name="description_colon">"Description: "</string>
    <string name="galleries_colon">Galleries: </string>
    <string name="not_available">&lt;n/a></string>

    <string-array name="network_types">
        <item>Wi-fi only</item>
        <item>Mobile</item>
        <item>Mobile with roaming</item>
    </string-array>
    <string-array name="entries_3">
        <item>1</item>
        <item>2</item>
        <item>4</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="page">Page:</string>
    <string name="update">Update</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="menu_options">Oprions</string>
    <string name="remove">Remove</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="thumbnail_type">Thumbnail type</string>
    <string name="its_image">Its image</string>
    <string name="system_thumbnail">System thumbnail</string>
    <string name="collage">Collage</string>
    <string name="default_word">Default</string>
    <string name="mask">Mask</string>
    <string name="title_activity_ex_galleries_service">ExGalleriesService</string>
    <string name="stop">Stop</string>
    <string name="counter" formatted="false">%d / %d</string>
    <string name="updated_value">Updated: %s</string>
    <string name="created_value">Created: %s</string>
    <string name="visible">Visible</string>
    <string name="skip">Skip</string>
    <string name="l_empty_l">&lt;Empty></string>
    <string name="all_shows">All shows</string>
    <string name="updatable">Updatable</string>
    <string name="remove_faulty">Remove faulty</string>
    <string name="counter_new"><![CDATA[&nbsp;/ <font color="GREEN">%d</font>]]></string>
    <string name="counter_fails"><![CDATA[&nbsp;/ <font color="RED">%d</font>]]></string>
    <string name="counter_new_pictures">%d new picture(s)</string>
    <string name="no_new_pictures">No new pictures</string>
    <string name="info">Info</string>
    <string name="error">Error</string>
    <string name="open_in_web">Open in web</string>
    <string name="hide">Hide</string>
    <string name="no">No</string>
    <string name="alert">Alert</string>
    <string name="you_can_restore_gallery_in_library_options">You can restore gallery in library options</string>
    <string name="gallery_will_be_invisible_but_you_can_restore_it">Gallery will be invisible but you can restore it in library options.\nDisable updates of this gallery too?</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="close">Close</string>
    <string name="library_options">Library options</string>
    <string name="set_the_title_of_library">Set the title of library</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="galleries_options">Galleries options</string>
    <string name="preferences">Preferences</string>
    <string name="select_option">Select option</string>
    <string name="auto_remove_failed_pictures">Auto remove failed pictures</string>
    <string name="summary">Summary</string>
    <string name="author">Author</string>
    <string name="version">Version</string>
    <string name="version_number" formatted="false">Version %s</string>
    <string name="webpage">Webpage</string>
    <string name="network_error">Network error</string>
    <string name="general">General</string>
    <string name="link_wtg">https://www.edeqa.com</string>
    <string name="link_app">https://play.google.com/store/apps/details?id=com.edeqa.exgalleries</string>
    <string name="link_repository">https://github.com/whitetigergroup/exgalleries/tree/master/plugins</string>
    <string name="copyright">Copyright © XXI, Edeqa</string>
    <string name="using_colon">Using: </string>
    <string name="get_new_plugins">Get new plugins</string>
    <string name="get_plugin_instruction">Download plugin in RAW-mode and add it from \"Download\" folder.</string>
    <string name="picture_removed">Picture removed</string>
    <string name="use_network">Use network</string>
    <string name="using_picasso">
<![CDATA[<b>Picasso</b> by <i>Square, Inc</i>
        (<a href="http://square.github.io">square.github.io</a>)]]>
    </string>
    <string name="using_touchimageview">
<![CDATA[<b>TouchImageView</b>
by <i>Mike Ortiz</i> (<a href="https://github.com/MikeOrtiz">github.com/MikeOrtiz</a>)]]>
    </string>
    <string name="using_gridviewwithheaderandfooter">
<![CDATA[<b>GridView with Header and Footer</b>
by <i>liaohuqiu</i> (<a href="https://github.com/liaohuqiu">github.com/liaohuqiu</a>)]]>
    </string>
    <string name="library_exists_updated">Library exists, updated</string>
    <string name="already_updating">Already updating</string>
    <string name="javascript_initialization_timeout">JavaScript initialization timeout, may be required device restart</string>
    <string name="cannot_update_because_of_network_is_not_available">Cannot update because of network is not available</string>
    <string name="not_found_link_for_this_item">Not found link for this item</string>
    <string name="album_will_be_removed">Album will be removed</string>
    <string name="library_will_be_removed_entirely">Library will be removed entirely</string>
    <string name="gallery_will_be_cleared">Gallery will be cleared</string>
    <string name="clear">Clear</string>
    <string name="stop_updating">Stop updating</string>
    <string name="mode">Mode</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="statistics">Statistics</string>
    <string name="pictures_total">Pictures total</string>
    <string name="pictures_new">New pictures</string>
    <string name="pictures_favorite">Favorite pictures</string>
    <string name="pictures_fault">Fault pictures</string>
    <string name="apply_to_all">Apply to all</string>
    <string name="albums_total">Albums total</string>
    <string name="app_updating">eXgalleries updating</string>
    <string name="updating">Updating</string>
    <string name="reload">Reload</string>
    <string name="update_complete">The update is complete.</string>
    <string name="updating_ellipsis">Updating&#8230;</string>
    <string name="updating_value_ellipsis">Updating %s&#8230;</string>
    <string name="value_new_pictures" formatted="false">%d new picture(s).</string>
    <string name="fetching_value" formatted="false">Fetching %s&#8230;</string>
    <string name="found_value_new_pictures" formatted="false">Found %d new picture(s)&#8230;</string>

</resources>
