<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.edeqa.exgalleries.AddLibraryActivity">

    <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

        <GridLayout
                android:id="@+id/gridLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2">

            <TextView
                    android:id="@+id/tvListLibraryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/library_colon" />

            <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/not_available" />

            <TextView
                    android:id="@+id/tvLibraryLink"
                    android:layout_gravity="start"
                    android:text="@string/link_colon" />

            <TextView
                    android:id="@+id/tvLink"
                    android:layout_gravity="start"
                    android:autoLink="web"
                    android:text="@string/not_available" />

            <TextView
                    android:id="@+id/textView5"
                    android:layout_gravity="start"
                    android:text="@string/version_colon" />

            <TextView
                    android:id="@+id/tvVersion"
                    android:layout_gravity="start"
                    android:text="@string/not_available" />

            <TextView
                    android:id="@+id/textView7"
                    android:layout_gravity="start"
                    android:text="@string/author_colon" />

            <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_gravity="start"
                    android:autoLink="web|email"
                    android:text="@string/not_available" />

            <TextView
                    android:id="@+id/textView9"
                    android:layout_gravity="start"
                    android:text="@string/description_colon" />

            <TextView
                    android:id="@+id/tvDescription"
                    android:layout_gravity="start"
                    android:autoLink="all"
                    android:text="@string/not_available" />

            <TextView
                    android:id="@+id/textView10"
                    android:layout_gravity="start"
                    android:text="@string/galleries_colon" />

            <TextView
                    android:id="@+id/tvLibraryCount"
                    android:layout_gravity="start" />

            <TableLayout
                    android:id="@+id/galleries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2">

            </TableLayout>
        </GridLayout>


    </ScrollView>
</RelativeLayout>
