<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/vDivider"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:background="#66000000" />

      <Button
          android:id="@+id/bSettings"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="false"
          android:layout_alignParentStart="true"
          android:layout_below="@id/vDivider"
          android:layout_centerHorizontal="true"
          android:background="@drawable/activated_background"
          android:drawableTop="@drawable/ic_settings_black_36dp"
          android:minWidth="60dp"
          android:src="@drawable/ic_settings_black_36dp"
          android:text="@string/options"
          android:textAppearance="?android:attr/textAppearanceSmallInverse" />

    <Button
        android:id="@+id/bAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vDivider"
        android:layout_centerHorizontal="true"
        android:background="@drawable/activated_background"
        android:drawableTop="@drawable/ic_info_outline_black_36dp"
        android:minWidth="60dp"
        android:text="@string/about"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:visibility="gone" />

    <Button
        android:id="@+id/bExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/vDivider"
        android:background="@drawable/activated_background"
        android:contentDescription="@android:string/untitled"
        android:drawableTop="@drawable/ic_forward_black_36dp"
        android:minWidth="60dp"
        android:text="@string/exit"
        android:textAppearance="?android:attr/textAppearanceSmallInverse" />

</RelativeLayout>