<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewSwitcher1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:inAnimation="@android:anim/slide_in_left" >

    <RelativeLayout
        android:id="@+id/rlThumbFirst"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/activated_background_canvas"
        android:clickable="false"
        android:descendantFocusability="blocksDescendants"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center" >

        <ImageView
            android:id="@+id/ivThumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@android:string/untitled"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_empty" />

        <RatingBar
            android:id="@+id/rbRating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp" />

        <ImageButton
            android:id="@+id/ibMenu"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/activated_background"
            android:contentDescription="@android:string/untitled"
            android:padding="5dp"
            android:src="@drawable/ic_more_vert_black_24dp" />

        <TextView
            android:id="@+id/tvAlbumTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/rbRating"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toLeftOf="@id/ibMenu"
            android:layout_toStartOf="@id/ibMenu"
            android:ellipsize="end"
            android:maxLines="2"
            android:shadowColor="@android:color/white"
            android:shadowDx="-2"
            android:shadowDy="2"
            android:shadowRadius="0.01"
            android:text="@android:string/untitled"
            android:textColor="@android:color/black" />

        <ProgressBar
            android:id="@+id/pbThumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/ivNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:contentDescription="@android:string/untitled"
            android:src="@drawable/icon_new" />

        <RelativeLayout
            android:id="@+id/rlError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_warning_black_48dp"
                android:gravity="center"
                android:text="@android:string/untitled"
                android:textColor="@android:color/primary_text_light" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/ivAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/shadow"
            android:contentDescription="@android:string/untitled"
            android:src="@drawable/ic_collections_black_24dp" />

        <TextView
            android:id="@+id/tvTotalCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ivAlbum"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_toEndOf="@id/ivAlbum"
            android:layout_toRightOf="@id/ivAlbum"
            android:shadowColor="@android:color/white"
            android:shadowDx="-2"
            android:shadowDy="2"
            android:shadowRadius="0.01"
            android:text="@android:string/untitled"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlThumbSecond"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center" >

        <Button
            android:id="@+id/bReload"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-3dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/reload" />

        <Button
            android:id="@+id/bRemove"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bReload"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-3dp"
            android:layout_marginTop="-3dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/remove" />

        <Button
            android:id="@+id/bSkip"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bRemove"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-3dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/skip" />
    </RelativeLayout>

</ViewSwitcher>